removes not needed definition of updatePrice on FullCoverage and SpecialFullCoverage

--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   },
   "jest": {
     "collectCoverage": true,
-    "collectCoverageFrom": ["src/*.js"],
-    "coverageReporters": ["lcov", "text"]
+    "collectCoverageFrom": [
+      "src/*.js"
+    ],
+    "coverageReporters": [
+      "lcov",
+      "text"
+    ]
   },
   "repository": {
     "type": "git",
